tests/negative/test_attr_owning.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

eval (fnc makeFoo () Foo {
    sym f:Foo;
    ret f;
});

fnc main () () {
    sym (x 0::((abcd (makeFoo))));
};